version/0.20/_sources/api/solver/_autosummary/settings/contact_resis.rst.txt
:orphan:

.. _contact_resis:

contact_resis
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.contact_resis.contact_resis
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

:ref:`add_zone <add_zone>`                                     'add_zone' command.

:ref:`list_zone <list_zone>`                                  'list_zone' command.

:ref:`delete_zone <delete_zone>`                            'delete_zone' command.

========================================   =======================================

.. rubric:: Named object type

:ref:`contact_resis_child <contact_resis_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`advanced <advanced>`       'advanced' child.

==========================   =====================

